[project]
name = "spiderfoot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adblockparser>=0.7,<1",
    "beautifulsoup4>=4.11.2,<5",
    "cherrypy>=18.8.0,<19",
    "cherrypy-cors>=1.6,<2",
    "cryptography>=3.4.8,<4",
    "dnspython>=2.3.0,<3",
    "exifread>=2.3.2,<3",
    "ipaddr>=2.2.0,<3",
    "ipwhois>=1.1.0,<1.2.0",
    "lxml>=4.9.2,<5",
    "mako>=1.2.4,<2",
    "netaddr>=0.8.0,<1",
    "networkx>=2.6.3,<2.7",
    "openpyxl>=3.1.1,<4",
    "phonenumbers>=8.13.6,<9",
    "publicsuffixlist>=0.9.3,<0.10",
    "pygexf>=0.2.2,<0.3",
    "pyopenssl>=21.0.0,<22",
    "pypdf2>=1.28.6,<2",
    "pysocks>=1.7.1,<2",
    "python-docx>=0.8.11,<0.9",
    "python-pptx>=0.6.21,<0.7",
    "python-whois>=0.7.3,<0.8",
    "pyyaml>=6.0.0,<7",
    "requests>=2.28.2,<3",
    "secure>=0.3.0,<0.4.0",
    "python-dotenv>=1.0.0,<2",
    "langchain-core>=0.3.0,<0.4",
    "langchain-openai>=0.3.0,<0.4",
    "langchain-anthropic>=0.3.0,<0.4",
    "langchain-google-genai>=2.0.0,<3",
    "langchain-ollama>=0.3.0,<0.4",
]
